--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@ svg {
   background: #feeeb0;
   width: 150px;
   font-size: 0.6em;
-  border-radius: 3px 10px 3px 2px;
+  border-radius: 3px 10px 10px 3px;
   position: relative;
-  top: 180px;
+  top: 185px;
   left: 560px;
+  padding: 5px;
 }
 .main_section {
   display: flex;
